# Projekt_WDBD

./: .env  .gitignore  Qt_df_model.py  README.md  analytical_queries.py  config.py  create_database.py  create_views.py  import_data.py  import_data_all.py  main.py  pyproject.toml  scheduler.py
map/: map.html
