[project]
name = "projekt-bazy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pyside6>=6.11.1",
    "qt-material>=2.17",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
